@@ -34,6 +34,10 @@ Changes in the next release:
   the build system (e.g. to pass -fpic) as make treats command line overrides
   differently from environment values.
 
+* The Configure module now supports setting the target triplet. The generated
+  configuration script handles the --target= command line option and the result
+  is available as $(Configure.TargetArchTriplet).
+
 Changes in 0.4.2:
 
 * The PVS module no longer fails when running the pvs-report target.
